--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>CodeVerge | Innovative Software & Fintech Solutions</title>
+    <meta name="description" content="Transform your business with CodeVerge's premium software, AI, and fintech solutions. Secure, scalable, and future-ready digital products for enterprises." />
+    <meta name="keywords" content="software, fintech, AI, app development, digital transformation, CodeVerge, SaaS, technology, secure, scalable, innovation" />
+    <meta name="author" content="CodeVerge Studio" />
+    <meta name="theme-color" content="#071518" />
+    <link rel="icon" type="image/png" href="/attached_assets/codeverges.jpeg" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="CodeVerge | Innovative Software & Fintech Solutions" />
+    <meta property="og:description" content="Transform your business with CodeVerge's premium software, AI, and fintech solutions. Secure, scalable, and future-ready digital products for enterprises." />
+    <meta property="og:image" content="/attached_assets/codeverges.jpeg" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CodeVerge | Innovative Software & Fintech Solutions" />
+    <meta name="twitter:description" content="Transform your business with CodeVerge's premium software, AI, and fintech solutions. Secure, scalable, and future-ready digital products for enterprises." />
+    <meta name="twitter:image" content="/attached_assets/codeverges.jpeg" />
   </head>
   <body>
     <div id="root"></div>
